# drone

./: .gitignore  README.md
_disabled_pkgs/ar_track_landing/src/: ar_track_landing.cpp
_disabled_pkgs/darknet_real_position/: CMakeLists.txt  package.xml
_disabled_pkgs/darknet_real_position/include/: darknet_real_position.h
_disabled_pkgs/darknet_real_position/launch/: darknet_real_position.launch
_disabled_pkgs/darknet_real_position/src/: darknet_real_position.cpp
_disabled_pkgs/livox_ros_driver2/config/: MID360_config.json
_disabled_pkgs/object_darknet/: CMakeLists.txt
_disabled_pkgs/object_darknet/include/: BoundingBoxes.h  object_darknet.h
_disabled_pkgs/object_darknet/launch/: object_darknet.launch
_disabled_pkgs/object_darknet/src/: object_darknet.cpp
src/FAST_LIO/PCD/: scans.pgm  scans.yaml
src/FAST_LIO/config/: mid360.yaml
src/FAST_LIO/launch/: mapping_mid360.launch
src/OrbbecSDK_ROS1/: CMakeLists.txt
src/OrbbecSDK_ROS1/include/orbbec_camera/: ob_camera_node_driver.h
src/OrbbecSDK_ROS1/src/: ob_camera_node_driver.cpp
src/api_library/: CMakeLists.txt  package.xml
src/api_library/include/: api_library.h
src/api_library/src/: api_library.cpp
src/collision_avoidance_vfh/: CMakeLists.txt  package.xml
src/collision_avoidance_vfh/launch/: collision_avoidance_vfh.launch
src/collision_avoidance_vfh/src/: collision_avoidance_vfh.cpp
src/complete_mission/: CMakeLists.txt  package.xml
src/complete_mission/src/: complete_mission.cpp
src/darknet_ros/darknet_ros/: CMakeLists.txt
src/darknet_ros/darknet_ros/launch/: darknet_ros.launch
src/data_distribute/: CMakeLists.txt  package.xml
src/data_distribute/launch/: receive.launch  send.launch
src/data_distribute/lib/: data_receive  data_send
src/ego_swarm/planner/plan_manage/launch/: advanced_param.xml  run_in_sim.launch  single_run_in_sim.launch  swarm.launch
src/ego_swarm/planner/rosmsg_tcp_bridge/src/: bridge_node.cpp
src/ego_swarm/planner_bridge/: CMakeLists.txt  package.xml
src/ego_swarm/planner_bridge/launch/: planner_bridge.launch
src/ego_swarm/planner_bridge/src/: planner_bridge_node.cpp
src/ego_swarm/swarm_bringup/: CMakeLists.txt  package.xml
src/ego_swarm/swarm_bringup/launch/: advanced_param.xml  planner.launch
src/ego_swarm/uav_simulator/Utils/multi_map_server/: CMakeLists.txt  package.xml
src/ego_swarm/uav_simulator/local_sensing/: CMakeLists.txt
src/follow_yolov8/: CMakeLists.txt  package.xml
src/follow_yolov8/launch/: follow_yolov8.launch
src/follow_yolov8/src/: follow_yolov8.cpp
src/jetson_csi_camera/: CMakeLists.txt  package.xml
src/jetson_csi_camera/launch/: csi0_gscam.launch  csi0_pub.launch  csi1_gscam.launch
src/jetson_csi_camera/scripts/: csi0_pub.py
src/lib_library/: CMakeLists.txt
src/lib_library/src/: lib_library.cpp
src/lidar_to_mavros/: CMakeLists.txt
src/lidar_to_mavros/src/: lidar_to_mavros.cpp
src/navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/object_position/: CMakeLists.txt  package.xml
src/object_position/include/: object_position.h
src/object_position/launch/: object_position.launch
src/object_position/src/: object_position.cpp
src/offboard_multi_position/src/: offboard_multi_position.cpp
src/pointcloud_to_laserscan-lunar-devel/launch/: my_node.launch
src/precise_drop/: CMakeLists.txt  package.xml
src/quaternion_converter/quaternion_converter/: CMakeLists.txt  package.xml
src/quaternion_converter/quaternion_converter/launch/: quaternion_converter.launch
src/quaternion_converter/quaternion_converter/src/: quaternion_converter.cpp
src/realsense-ros/realsense2_camera/launch/: demo_pointcloud.launch  rs_camera.launch  rs_d400_and_t265.launch
src/robocup2024/: CMakeLists.txt  package.xml
src/robocup2024/launch/: robocup2024.launch
src/robocup2024/src/: robocup2024.cpp
src/robot_bringup/launch/: bringup_ar_track_landing.launch  bringup_face_detect.launch  bringup_mid360.launch  bringup_precise_drop.launch  bringup_v2_ar_track_landing.launch  bringup_vins.launch  camera_d435.launch  cartographer.launch  cartographer_scan.launch  color_tracking.launch  gmapping.launch  line_tracking.launch  lsn10.launch  mid360_bringup.launch  navigation.launch  navigation_cartographer.launch  navigation_gmapping.launch  navigation_mid360.launch  rs_camera.launch  rs_camera_old.launch  target_follow.launch  vins_fusion.launch  vslam_mapping.launch  yolov8_d435.launch
src/robot_bringup/launch/cartographer_ros/: demo_revo_lds.launch  demo_revo_lds_imu.launch  demo_revo_lds_t265.launch
src/self_check/: CMakeLists.txt  package.xml
src/self_check/src/: self_check.cpp
src/simple_follower/: CMakeLists.txt  package.xml
src/simple_follower/cfg/: HSV_Parament.cfg
src/simple_follower/launch/: visual_follower.launch
src/simple_follower/msg/: position.msg
src/simple_follower/parameters/: PID_visual_param.yaml
src/simple_follower/scripts/: VisualFollow_px4_ctrl.py
src/simple_follower/src/: px4_control.cpp
src/slam_navigation/config/: mid360.yaml
src/slam_navigation/launch/: test_location.launch
src/target_follow/: CMakeLists.txt  package.xml
src/target_follow/launch/: target_follow.launch  target_follow_horizontal.launch
src/target_follow/src/: V1_follow_pid.cpp  target_follow(复件).cpp  target_follow(高度不抖动).cpp  target_follow.cpp  target_follow_horizontal.cpp
src/usb_cam/nodes/: usb_cam_node.cpp
src/v2_ar_track_landing/: CMakeLists.txt  package.xml
src/v2_ar_track_landing/src/: v2_ar_track_landing.cpp
src/vision_opencv/cv_bridge/: CMakeLists.txt
src/visual_trans/: CMakeLists.txt  package.xml  readme.txt
src/visual_trans/launch/: follow.launch
src/visual_trans/src/: visual_trans.cpp
src/web_video_server-develop/launch/: web_video_server.launch
src/yolov8_ros/yolov8_ros/launch/: yolo_v8.launch  yolo_v8_d435.launch  yolo_v8_double.launch
src/yolov8_ros/yolov8_ros/scripts/: yolo_v8.py  yolo_v8_multi_cam.py
src/yolov8_ros/yolov8_ros_msgs/msg/: BoundingBoxes.msg
(+2 files in other folders)
