<?xml version="1.0"?>
<package format="2">
  <name>jetson_csi_camera</name>
  <version>0.0.1</version>
  <description>Jetson CSI camera launch files</description>

  <maintainer email="wyz@example.com">wyz</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>gscam</exec_depend>
</package>
